# nyro

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOG_CN.md  Cargo.toml  Makefile  README.md  README_CN.md
.github/workflows/: ci.yml  release-desktop.yml  release-server.yml  storage-backends.yml
crates/nyro-core/src/: config.rs  error.rs  lib.rs
crates/nyro-core/tests/: admin.rs  logging_spec.rs  protocol_conversion.rs
crates/nyro-tools/src/: proxy.rs
docs/database/: schema.md
docs/design/: architecture.md
docs/design/ir/: CHANGELOG.md
docs/standalone/: README.md
go/: .editorconfig  .golangci.yaml  README.md  atlas.hcl  buf.gen.yaml  go.mod  go.sum  nyro.go
go/cmd/admin/: admin.go  admin_test.go  configtls_test.go
go/cmd/ca/: ca.go  ca_test.go
go/cmd/gateway/: configtls_test.go  gateway.go  gateway_test.go  obs.go  obs_test.go
go/cmd/migrate/: migrate.go  migrate_test.go
go/cmd/tool/: tool.go  tool_test.go
go/docs/: cutover.md
go/docs/schema/: README.md  config.md  database.md  migrations.md
go/docs/security/: config-sync-mtls.md
go/internal/admin/: admin.go  admin_test.go  broadcast_test.go  doc.go  models_discovery.go  oauth.go  oauth_test.go  obs_source.go  obs_source_test.go  preset_view.go  route_import.go  stats_source_test.go  upstream_validate.go
go/internal/auth/: auth.go  doc.go  driver.go  pkce.go  pkce_test.go  sessions.go
go/internal/bootstrap/: bootstrap.go  bootstrap_test.go
go/internal/config/: config.go  config_test.go  doc.go
go/internal/configsync/: client.go  client_mtls_test.go  client_test.go  configcache.go  configcache_test.go  convert.go  convert_test.go  doc.go  epochwatch.go  epochwatch_test.go  server.go  server_mtls_test.go  server_test.go  snapshot.go
go/internal/envflag/: envflag.go  envflag_test.go
go/internal/logging/: doc.go
go/internal/observability/: config.go  config_test.go  doc.go  flush_config_test.go  hooks.go  hooks_test.go  janitor.go  janitor_test.go  logs_query.go  logs_query_test.go  metrics_handles.go  otlp_endpoint_test.go  otlp_export_integration_test.go  provider.go  provider_test.go  receiver.go  receiver_flush_test.go  receiver_test.go  signals.go  signals_test.go  stats_aggregate.go  stats_aggregate_test.go  stats_types.go  swappable.go
go/internal/parity/: normalize.go  normalize_test.go
go/internal/plugin/: doc.go  kernel.go  phase.go  phase_test.go
go/internal/protocol/: doc.go
go/internal/protocoltest/: cassette.go  conversion_test.go  golden.go  harness.go  probe_test.go  record_scenarios_test.go
go/internal/provider/: anthropic.go  anthropic_test.go  awsbedrock.go  awsbedrock_test.go  azurefoundry.go  azurefoundry_test.go  catalog.go  custom.go  custom_test.go  deepseek.go  deepseek_test.go  default.go  default_test.go  doc.go  gcpvertex.go  gcpvertex_test.go  gemini.go  gemini_test.go  metadata.go  minimax.go  minimax_test.go  models.dev.json  (+19 more)
go/migrations/: embed.go
go/webui/: package.json  pnpm-lock.yaml  vitest.config.ts
src-server/: Cargo.toml
src-server/src/: admin_routes.rs  main.rs  yaml_config.rs
src-tauri/: tauri.conf.json
src-tauri/src/: commands.rs  lib.rs
webui/: package.json  pnpm-lock.yaml
webui/src/: index.css  main.tsx
(+457 files in other folders)
