[package]
name = "nyro-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Nyro AI Gateway — Standalone Server Binary"

[dependencies]
nyro-core = { path = "../crates/nyro-core" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
shellexpand = "3"
anyhow = { workspace = true }
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
chrono = { workspace = true }
rust-embed = { version = "8", features = ["compression"] }
